--- a/refund.html
+++ b/refund.html
@@ -10,7 +10,7 @@
     <h1>Refund & Cancellation Policy</h1>
     <p>We offer a digital product that is delivered instantly upon purchase. Therefore, we do not offer refunds or cancellations once the payment is completed.</p>
     <p>All sales are final. By completing the purchase, you agree to this policy.</p>
-    <p>If you face issues accessing your eBook, contact us at <a href="mailto:support@manifestmagic.in">traveliqytube@gmail.com</a>.</p>
+    <p>If you face issues accessing your eBook, contact us at <a href="mailto:traveliqytube@gmail.com">traveliqytube@gmail.com</a>.</p>
   </div>
 </body>
 </html>
